# WAF

./: Cargo.toml  test
appdata/: general.yaml  wafssl.crt  wafssl.csr  wafssl.key
appdata/edges/: 192.168.122.23.yaml
appdata/ip-rules/: 192.168.122.174.yaml
appdata/locations-rules/: 0.yaml
src/: client.rs  configdb.rs  edge_server.rs  http1.rs  ip_rule.rs  location_rule.rs  main.rs  server.rs
