[package]
name = "waf"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "0.14.27"
hyper-openssl = "0.9.2"
once_cell = "1.18.0"
openssl = "0.10.59"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.33.0", features = ["full"] }
tokio-openssl = "0.6.3"
